tests/cross-compile/dxc-error.hlsl.expected
result code = -1
standard error = {
dxc: tests/cross-compile/dxc-error.hlsl:9:2: error: use of undeclared identifier 'gOutputBuffer'
        gOutputBuffer[tid] = dispatchThreadID.x * 0.5f;
        ^
}
standard output = {
}
